fix associated fields dropdown being cut off

--- a/src/app/modules/attribution/features/features.component.css
+++ b/src/app/modules/attribution/features/features.component.css
@@ -47,3 +47,7 @@
 .features-button {
   font-size: 20px;
 }
+
+.card-closed {
+  overflow: hidden;
+}
